Add POST to message form

--- a/views/form.pug
+++ b/views/form.pug
@@ -4,12 +4,12 @@ block content
     h1= title
     form(action='/new' method="POST")
         input(
-        name="User"
+        name="messageUser"
         placeholder="User"
         type="text"
         )
         input(
-            name="Message"
+            name="messageText"
             placeholder="Message"
             type="text"
         )
